# SEP_DMPG

./: .coverage  .coveragerc  .gitignore  DatenspeicherungTODO  Dockerfile  README.md  TabellenErstellung.sql  capacity_check.py  data_structure.py  devcontainer.json  dmpg_api.pem  environment.yml  logstash.conf  requirements.txt  runtime_prediction.json  setup.py  ssh_with_parameters.py  ssl-cert-snakeoil.pem  test.html  test_model5_1  test_model_pcb.py
CapacityCheck/: CapacityCheck.py
DMPG/: .gitignore  CONTRIBUTING.md  README.md  requirements.txt
DMPG.egg-info/: PKG-INFO  SOURCES.txt
Datenspeicherung/: generate_ssh_key.py
Kapazitätsprüfung/: capacity check.py
Laufzeitprognose/: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  monitoring.py  setup.cfg  setup.py
Laufzeitprognose/src/core/: entity.py  queue_orders.py  server.py  sink.py  source.py
Laufzeitprognose/src/models/: model4_1.py  progress_10_percent.json
Laufzeitprognose/src/util/: global_imports.py  runtime_estimator.py  runtime_prediction.py  simulations.py  singleton.py
Laufzeitprognose/tests/: test_runtime_estimator.py
SSHVerbindung/: ssh_with_parameters.py
Tests/: .coverage  capacity_check.py  ssh_with_parameters.py  test_capacity_check.py  test_hardware.py  test_ssh_with_parameters.py
Verteilung/: composite_tree.py  nodes_for_composite.py
Webseite/: runtime_prediction.json  styles.css
docs/: search.js  src.html  toDo
misc_server/: dmpg_api.conf  dmpg_api_ssl.conf  grafana.conf  grafana_ssl.conf
server/: app.py  dmpg_api.wsgi  environment.py  job.py  nodes_for_composite.py
(+343 files in other folders)
