[metadata]
name = DMPG
version = 0.1
author = Ralf Buschermöhle
author_email = r.buschermoehle@hs-osnabrueck.de
description = Simulation PlayGround
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = discrete, event, simulation
license = MIT
classifiers =
    Framework :: SimPy
    Programming Language :: Python :: 3
